--- a/index.html
+++ b/index.html
@@ -1,50 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400&display=swap"
+      rel="stylesheet"
+    />
     <title>Document</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <div class="header">
-            <h1>WHY THIS IS AWESOME</h1>
-        </div>
+      <div class="header">
+        <h1>WHY THIS IS AWESOME</h1>
+      </div>
     </header>
     <div class="line"></div>
     <div class="maintext">
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
     </div>
     <div class="mainblock">
-        <div class="block">
-            <div class="image_1">
-                <img src="bulb.png" width="19px" height="28px" alt="bulb">
-            </div>
-            <h2>Thoughtful Design</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin
-                gravida dolor sit amet lacus accumsan et viverra.</p>
+      <div class="block">
+        <div class="image_1">
+          <img src="bulb.png" width="19px" height="28px" alt="bulb" />
         </div>
-        <div class="block">
-            <div class="image_2">
-                <img src="keyboard.png" width="35px" height="21px" alt="keyboard">
-            </div>
-            <h2>Well Crafted</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin
-                gravida dolor sit amet lacus accumsan et viverra.</p>
+        <h2>Thoughtful Design</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
+          euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan
+          et viverra.
+        </p>
+      </div>
+      <div class="block">
+        <div class="image_2">
+          <img src="keyboard.png" width="35px" height="21px" alt="keyboard" />
         </div>
-        <div class="block">
-            <div class="image_3">
-                <img src="lightning.png" width="17px" height="31px" alt="lightning">
-            </div>
-            <h2>Easy to Customize</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin
-                gravida dolor sit amet lacus accumsan et viverra.</p>
+        <h2>Well Crafted</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
+          euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan
+          et viverra.
+        </p>
+      </div>
+      <div class="block">
+        <div class="image_3">
+          <img src="lightning.png" width="17px" height="31px" alt="lightning" />
         </div>
+        <h2>Easy to Customize</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
+          euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan
+          et viverra.
+        </p>
+      </div>
     </div>
-</body>
-
+  </body>
 </html>
